[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "repl_python3_Snapchutt"
version = "0.1.0"
[tool.poetry.dependencies]
python = "^3.8"
sortedcontainers = "^2.4.0"
sortedcollections = "^2.1.0"
[tool.poetry.dev-dependencies]
